release: fix authority path validation